# spinner

./: .buildinfo  .checkpatch.conf  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  west.yml  zbibliography.html
.doctrees/: index.doctree  zbibliography.doctree
.doctrees/theory/: currsmp.doctree  foc.doctree  svpwm.doctree
.github/workflows/: build.yml  docs.yml
_downloads/8f23aed83555a43cc1198424b2515e87/: svpwm-modulation.py
_sources/: index.rst.txt
_sources/theory/: currsmp.rst.txt  foc.rst.txt  svpwm.rst.txt
docs/: CMakeLists.txt  Doxyfile.in  bibliography.bib  conf.py  doxygen.md  requirements.txt
docs/_doxygen/: groups.dox
docs/_static/css/: light.css
docs/components/cloop/: index.rst
docs/components/cloop/images/: cloop-only-schematic.odg
docs/components/currsmp/: index.rst
docs/components/currsmp/images/: intro-inverter-schematic-blocks.odg  intro-inverter-schematic.odg
docs/components/feedback/images/: halls.odg
docs/components/feedback/impl/: stm32-halls.rst
docs/components/svpwm/images/: ps-schematic.odg
docs/components/svpwm/impl/images/: stm32-timer-centeraligned.odg
docs/theory/images/: currsample-mid.odg  currsample-svpwm-anim.py  foc-abcs-anim.py  svpwm-limit.odg  svpwm-pwm-timing.odg
drivers/: CMakeLists.txt  Kconfig
lib/: CMakeLists.txt  Kconfig
lib/control/: Kconfig  (+3 more)
spinner/: CMakeLists.txt  Kconfig  debug.conf  main.c  prj.conf  sample.yaml
theory/: currsmp.html  foc.html  svpwm.html
zephyr/: module.yml
(+225 files in other folders)
